testcases/semantic_error/type_error3.shp
class Main<p1> where
    p1: [Main<p1>]
{
    f1: i32;

    fn test(): i32 {
        return 3 & true;
    }
}
